// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePageButtons should render buttons that match claims {"TE": [Object]} 1`] = `
Array [
  Object {
    "props": Object {
      "color": "primary",
      "to": "/te/upload",
    },
    "text": "Upload",
  },
]
`;

exports[`HomePageButtons should render buttons that match claims {"TE": [Object]} 2`] = `
Array [
  Object {
    "props": Object {
      "color": "primary",
      "to": "/te/tasks",
    },
    "text": "TE",
  },
  Object {
    "props": Object {
      "color": "primary",
      "to": "/te/upload",
    },
    "text": "Upload",
  },
]
`;
